fixed project alignment

--- a/style.css
+++ b/style.css
@@ -1128,6 +1128,10 @@ footer.showSection {
         width: 100%;
         border-radius: 5px;
     }
+    .project-1-right h3,
+    .project-3-right h3 {
+        text-align: center;
+    }
     .project-1 .project-description,
     .project-3 .project-description {
         width: 100%;
@@ -1143,6 +1147,9 @@ footer.showSection {
         flex-direction: column;
         align-items: center;
         width: 100%;
+    }
+    .project-2-left h3 {
+        text-align: center;
     }
     .project-2-right {
         position: relative;
